--- a/src/app.html
+++ b/src/app.html
@@ -13,8 +13,24 @@
 			src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.28/dist/all.shoelace.js"
 		></script>
 		%sveltekit.head%
+		<style>
+			* {
+				box-sizing: content-box;
+			}
+
+			html {
+				overflow: hidden;
+				height: 100%;
+			}
+
+			body {
+				margin: 0;
+				overflow: auto;
+				height: 100%;
+			}
+		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents; height: 100vh;">%sveltekit.body%</div>
 	</body>
 </html>
