--- a/static/timecapsule/2010portfolio/rubric.html
+++ b/static/timecapsule/2010portfolio/rubric.html
@@ -6,21 +6,21 @@
 		<META NAME="Keywords" CONTENT="michael patrick tarpey high school senior irish">
 		<META NAME="Description" CONTENT="Landstown High School, Virginia Beach, VA, USA.">
 	</head>
-	
+
 	<body bgcolor=000000 text=FFFFFF link=90EE90 alink=DC143C vlink=7F9A65>
 <font face=verdana color=FFFFFF size=3>
 
 <img src="2009portfolio/apargument.png">
 
-<link rel="shortcut icon" HREF="http://michaeltarpey.50webs.com/1up.ico">
+<link rel="shortcut icon" HREF="https://michaeltarpey.50webs.com/1up.ico">
 
 		<p>
 		<font size=1><center>To contact Michael Tarpey, fire off an e-mail to <a href="mailto:Michael.Tarpey@daytonaocean.com">Michael.Tarpey@daytonaocean.com</a>.
 		</p>
-		
+
 		<p>
-		<a href="http://www.michaeltarpey.com">Back to the home page</a>
+		<a href="https://www.michaeltarpey.com">Back to the home page</a>
 		</p>
-		
+
 	</body>
 </html>
