--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
 		%sveltekit.head%
 		<style>
 			* {
-				box-sizing: content-box;
+				box-sizing: border-box;
 			}
 
 			html {
@@ -28,9 +28,14 @@
 				overflow: auto;
 				height: 100%;
 			}
+
+			.page-style {
+				overflow: auto;
+				min-height: 100%;
+			}
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents; height: 100vh;">%sveltekit.body%</div>
+		<div style="display: block; height: 100vh;">%sveltekit.body%</div>
 	</body>
 </html>
