--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,6 @@
 			}
 
 			html {
-				overflow: hidden;
 				height: 100%;
 			}
 
@@ -27,6 +26,7 @@
 				margin: 0;
 				overflow: auto;
 				height: 100%;
+				background-color: #000000;
 			}
 
 			.page-style {
@@ -36,6 +36,6 @@
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: block; height: 100vh;">%sveltekit.body%</div>
+		<div style="display: contents; height: 100vh;">%sveltekit.body%</div>
 	</body>
 </html>
