--- a/src/app.html
+++ b/src/app.html
@@ -36,6 +36,6 @@
 		</style>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents; height: 100vh;">%sveltekit.body%</div>
+		<div style="display: contents; height: 100vh">%sveltekit.body%</div>
 	</body>
 </html>
