--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,33 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/index/favicon/favicon-32x32.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="author" content="Mike Tarpey" />
+		<!-- favicon stuff -->
+		<meta name="msapplication-TileColor" content="#2d89ef" />
+		<meta name="theme-color" content="#ffffff" />
+		<link rel="apple-touch-icon" sizes="180x180"
+		href="/index/favicon/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32"
+		href="/index/favicon/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16"
+		href="/index/favicon/favicon-16x16.png" />
+		<link rel="manifest" href="/index/favicon/site.webmanifest" />
+		<link rel="mask-icon" href="/index/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+		<link rel="shortcut icon" href="/index/favicon/favicon.ico" />
+		<!-- global open graph, applies to all pages -->
+		<link rel="canonical" href="https://timecapsule.tarpey.dev"/>
+		<meta property="og:title" content="Mike Tarpey's time capsule"/>
+		<meta property="og:description" content="Mike Tarpey's website time capsule.
+		The site has changed a lot throughout the years...pages from the past
+		can be viewed here!"/>
+		<meta property="og:url" content="https://timecapsule.tarpey.dev"/>
+		<meta property="og:image" content="https://timecapsule.tarpey.dev/timecapsuledeep/images/Me.jpg"/>
+		<meta name="twitter:image" content="https://timecapsule.tarpey.dev/timecapsuledeep/images/Me.jpg"/>
+		<meta property="og:type" content="website"/>
+		<meta name="twitter:card" content="summary_large_image"/>
+		<meta property="og:site_name" content="Mike Tarpey's time capsule"/>
+		<meta property="og:image:alt" content="Mike Tarpey in his 8th grade computers class, wearing a faded lime green shirt and sitting in front of Mrs. Potter's computer. Mrs. Potter took this photo for this very project: applying different HTML tags to a website!"/>
+		<!-- shoelace components -->
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.28/dist/themes/base.css"
