--- a/src/app.html
+++ b/src/app.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/index/favicon/favicon-32x32.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Mike Tarpey" />
 		<!-- favicon stuff -->
-		<meta name="msapplication-TileColor" content="#2d89ef" />
-		<meta name="theme-color" content="#ffffff" />
-		<link rel="apple-touch-icon" sizes="180x180"
-		href="/index/favicon/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="32x32"
-		href="/index/favicon/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16"
-		href="/index/favicon/favicon-16x16.png" />
-		<link rel="manifest" href="/index/favicon/site.webmanifest" />
-		<link rel="mask-icon" href="/index/favicon/safari-pinned-tab.svg" color="#5bbad5" />
-		<link rel="shortcut icon" href="/index/favicon/favicon.ico" />
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⏳</text></svg>" />
 		<!-- global open graph, applies to all pages -->
 		<link rel="canonical" href="https://timecapsule.tarpey.dev"/>
 		<meta property="og:title" content="Mike Tarpey's time capsule"/>
