--- a/src/app.html
+++ b/src/app.html
@@ -9,16 +9,24 @@
 		<!-- global open graph, applies to all pages -->
 		<link rel="canonical" href="https://timecapsule.tarpey.dev"/>
 		<meta property="og:title" content="Mike Tarpey's time capsule"/>
+		<meta property="og:site_name" content="Mike Tarpey's time capsule"
 		<meta property="og:description" content="Mike Tarpey's website time capsule.
 		The site has changed a lot throughout the years...pages from the past
 		can be viewed here!"/>
 		<meta property="og:url" content="https://timecapsule.tarpey.dev"/>
 		<meta property="og:image" content="https://timecapsule.tarpey.dev/timecapsuledeep/images/Me.jpg"/>
-		<meta name="twitter:image" content="https://timecapsule.tarpey.dev/timecapsuledeep/images/Me.jpg"/>
+		<meta property="og:image:alt" content="Mike Tarpey in his 8th grade computers class, wearing a faded lime green shirt and sitting in front of Mrs. Potter's computer. Mrs. Potter took this photo for this very project: applying different HTML tags to a website!"/>
 		<meta property="og:type" content="website"/>
 		<meta name="twitter:card" content="summary_large_image"/>
-		<meta property="og:site_name" content="Mike Tarpey's time capsule"/>
-		<meta property="og:image:alt" content="Mike Tarpey in his 8th grade computers class, wearing a faded lime green shirt and sitting in front of Mrs. Potter's computer. Mrs. Potter took this photo for this very project: applying different HTML tags to a website!"/>
+		<meta name="twitter:site:id" content="16149065">
+		<meta name="twitter:creator" content="@Tarpstone">
+		<meta name="twitter:creator:id" content="16149065">
+		<meta property="twitter:title" content="Mike Tarpey's time capsule"/>
+		<meta property="twitter:description" content="Mike Tarpey's website time capsule.
+		The site has changed a lot throughout the years...pages from the past
+		can be viewed here!"/>
+		<meta name="twitter:image" content="https://timecapsule.tarpey.dev/timecapsuledeep/images/Me.jpg"/>
+		<meta property="twitter:image:alt" content="Mike Tarpey in his 8th grade computers class, wearing a faded lime green shirt and sitting in front of Mrs. Potter's computer. Mrs. Potter took this photo for this very project: applying different HTML tags to a website!"/>
 		<!-- shoelace components -->
 		<link
 			rel="stylesheet"
