Prettier run on the last two rogue HTML files

--- a/static/timecapsule/2010portfolio/rubric.html
+++ b/static/timecapsule/2010portfolio/rubric.html
@@ -1,26 +1,25 @@
 <html>
 	<head>
-		<title>
-		Michael Tarpey, High School Senior - Writing Goals
-		</title>
-		<META NAME="Keywords" CONTENT="michael patrick tarpey high school senior irish">
-		<META NAME="Description" CONTENT="Landstown High School, Virginia Beach, VA, USA.">
+		<title>Michael Tarpey, High School Senior - Writing Goals</title>
+		<meta name="Keywords" content="michael patrick tarpey high school senior irish" />
+		<meta name="Description" content="Landstown High School, Virginia Beach, VA, USA." />
+		<link rel="shortcut icon" href="https://michaeltarpey.50webs.com/1up.ico" />
 	</head>
 
-	<body bgcolor=000000 text=FFFFFF link=90EE90 alink=DC143C vlink=7F9A65>
-<font face=verdana color=FFFFFF size=3>
+	<body bgcolor="000000" text="FFFFFF" link="90EE90" alink="DC143C" vlink="7F9A65">
+		<font face="verdana" color="FFFFFF" size="3"></font>
+		<img src="2009portfolio/apargument.png" />
+		<font size="1"
+			><center>
+				<p>
+					To contact Michael Tarpey, fire off an e-mail to an old email address that no longer
+					exists.
+				</p>
 
-<img src="2009portfolio/apargument.png">
-
-<link rel="shortcut icon" HREF="https://michaeltarpey.50webs.com/1up.ico">
-
-		<p>
-		<font size=1><center>To contact Michael Tarpey, fire off an e-mail to <a href="mailto:Michael.Tarpey@daytonaocean.com">Michael.Tarpey@daytonaocean.com</a>.
-		</p>
-
-		<p>
-		<a href="https://www.michaeltarpey.com">Back to the home page</a>
-		</p>
-
+				<p>
+					<a href="https://www.michaeltarpey.com">Back to the home page</a>
+				</p>
+			</center>
+		</font>
 	</body>
 </html>
